Added an "advanced" notebook.

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/customize.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/customize.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "# Customize a flavor\n",
     "\n",
-    "Sometimes you need very specific dependencies or versions of dependencies in the Exasol UDFs. In such case you can customize a Script-Language Container."
+    "Sometimes you need very specific dependencies or versions of dependencies in the Exasol UDFs. In such case you can customize a Script-Language Container.\n",
+    "You find additional information in the [Exasol official documentation](https://docs.exasol.com/db/latest/database_concepts/udf_scripts/adding_new_packages_script_languages.htm#)."
    ]
   },
   {
@@ -67,7 +68,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ./utils/file_system_ui.ipynb"
+    "%run ./utils/file_system_ui.ipynb\n",
+    "%run ./utils/slc_ui.ipynb"
    ]
   },
   {
@@ -78,26 +80,19 @@
    "source": [
     "## Customize\n",
     "\n",
-    "### Flavor Definition\n",
-    "The following diagram shows a high level overview of the build steps for a script languages container.\n",
+    "First you need to define an alias for the new script-languages-container. The alias will be used to reference the container later from the UDF's.\n",
     "\n",
-    "\n",
-    "![image.png](slc_main_build_steps.svg)\n",
-    "\n",
-    "\n",
-    "\n",
-    "For customizing a flavor usually the `flavor_customization` build step is most important. It contains everything you need to add dependencies. The remaining build steps should be only changed with care, but sometimes some dependencies are defined in other build steps because the script client depends on them. \n",
-    "Check the directory structure of the selected flavor:\n"
+    "Note: In this tutorial the alias also will be used as part of the export file (tar.gz) and the uploaded container to the BucketFS. This allows you to create, upload and use different script-language-containers: one per alias."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c297976-edf1-4708-bf58-99520e314ffb",
+   "id": "a88f47d9-7337-45fb-b2d4-08b74bc95f5f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_directory_content(slctmanager.slc_dir.flavor_dir, 2)"
+    "display(get_alias_ui(ai_lab_config, \"my_custom_python\"))"
    ]
   },
   {
@@ -144,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_files([slctmanager.custom_pip_file])"
+    "show_files([slctmanager.slc_dir.custom_pip_file])"
    ]
   },
   {
@@ -168,7 +163,7 @@
     "xgboost_pkg = slct_manager.PipPackageDefinition(pkg=\"xgboost\", version=\"2.0.3\")\n",
     "scikit_learn_pkg = slct_manager.PipPackageDefinition(pkg=\"scikit-learn\", version=\"1.5.0\")\n",
     "slctmanager.append_custom_packages([xgboost_pkg, scikit_learn_pkg])\n",
-    "show_files([slctmanager.custom_pip_file])"
+    "show_files([slctmanager.slc_dir.custom_pip_file])"
    ]
   },
   {
@@ -193,20 +188,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9817ae87-7873-4c27-a373-32280a9cfd22",
+   "id": "c58b9172-e607-437a-9568-4063a88d446f",
    "metadata": {},
    "source": [
-    "Note: Your old container doesn't get lost, because when you change a flavor your container gets a new hash code. If you revert your changes the system automatically uses the existing cached container. Below you can see the content of the cache directory for the containers."
+    "Lets check the resulting tar gz file:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff2d9c0f-9499-480b-a70c-3f53d57a3d9f",
+   "id": "aabe7634-6d47-40c8-a363-4f53bf8702f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_directory_content(slctmanager.working_path.output_path / \"cache\" / \"exports\")"
+    "show_directory_content(slctmanager.working_path.export_path)"
    ]
   },
   {
@@ -217,7 +212,8 @@
     "#### Upload the Container to the Database\n",
     "To use our container we need to upload it to the BucketFS . If the build machine has access to the BucketFS we can do it with the exaslct upload command, otherwise you need to export the container and transfer it to a machine that has access to the BucketFS and upload it via curl, as described in our documentation.\n",
     "\n",
-    "With the following command we upload the new script language container.\n"
+    "With the following command you upload the new script language container.\n",
+    "\n"
    ]
   },
   {
@@ -245,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ai_lab_config.get(slct_manager.ACTIVATION_KEY)"
+    "slctmanager.activation_key"
    ]
   },
   {
@@ -253,18 +249,7 @@
    "id": "8797d3e3-a43e-4250-a5f0-50fb04aa1514",
    "metadata": {},
    "source": [
-    "The syntax is: `alias=url`. The alias is used when defining an UDF, the URL only for the language activation.\n",
-    "For simplicity the `SlctManager` provides access to the alias, as you need it later to define the UDF's:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f346cd1-a997-480f-a07e-2d3dbef6e25d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "slctmanager.language_alias"
+    "The syntax is: `alias=url`. The activation key will be used in the `ALTER_SESSION` or `ALTER_SYSTEM` commands to \"register\" the script-language-container for usage in the UDF's."
    ]
   },
   {
@@ -274,14 +259,6 @@
    "source": [
     "You can now continue [testing the uploaded container](./test_slc.ipynb)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ce56a5b-534a-4112-a481-8abc5d39f78e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
