--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/using_the_script_languages_container_tool.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/using_the_script_languages_container_tool.ipynb
@@ -28,16 +28,10 @@
     "You will learn how to:\n",
     "- [Export a script-languages-container from the flavor](./export_as_is.ipynb)\n",
     "- [Customize the flavor, export and upload the script-language-container](./customize.ipynb)\n",
-    "- [Test the uploaded script-languages-container](./test_slc.ipynb)"
+    "- [Test the uploaded script-languages-container](./test_slc.ipynb)\n",
+    "\n",
+    "Additionaly, there is the [Advanced Topics](./advanced.ipynb) tutorial which provides more detailed information."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96bd2c9c-ec81-43e7-9314-b89dea4d5770",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
