--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/utils/slc_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/utils/slc_ui.ipynb
@@ -12,25 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f044043c-8fa1-442e-8d2c-b4221accff9f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba3b8805cabd4763a9903674f8a2601a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from exasol.nb_connector.utils import upward_file_search\n",
     "\n",
@@ -38,12 +23,13 @@
     "# Need to search for the styles NB from the current directory upwards.\n",
     "\n",
     "%run {upward_file_search('utils/ui_styles.ipynb')}\n",
-    "%run {upward_file_search('utils/popup_message_ui.ipynb')}"
+    "%run {upward_file_search('utils/popup_message_ui.ipynb')}\n",
+    "%run {upward_file_search('utils/generic_config_ui.ipynb')}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a2e90ebe-37d6-43e6-9677-dace6c06d942",
    "metadata": {},
    "outputs": [],
@@ -182,7 +168,19 @@
     "    \n",
     "\n",
     "    if not clone_slc_repo(conf):\n",
-    "        return ui\n"
+    "        return ui\n",
+    "\n",
+    "\n",
+    "\n",
+    "def get_alias_ui(conf: Secrets, default_value) -> widgets.Widget:\n",
+    "    \"\"\"\n",
+    "    Creates a UI form for choosing the alias name.\n",
+    "    \"\"\"\n",
+    "    inputs = [\n",
+    "        ('Language Alias', widgets.Text(value=conf.get(AILabConfig.slc_alias, default_value)), AILabConfig.slc_alias),\n",
+    "    ]\n",
+    "\n",
+    "    return get_generic_config_ui(conf, [inputs], ['Language Alias'])\n"
    ]
   },
   {
