1. Fixed test_slc.ipynb 2. More info to export_as_is.ipynb

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/export_as_is.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/export_as_is.ipynb
@@ -5,7 +5,9 @@
    "id": "14dad93e-8ac8-45ce-bec1-51b3dfa15e44",
    "metadata": {},
    "source": [
-    "# Export the flavor as is"
+    "# Export the flavor as is\n",
+    "\n",
+    "In this tutorial you learn how to build the existing flavor (without any modifiction) and write the result to a tar gz file.\n"
    ]
   },
   {
@@ -134,6 +136,23 @@
    "source": [
     "show_directory_content(slctmanager.working_path.export_path)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "826ac429-f65a-4f9a-98e7-a63f79a0a5fe",
+   "metadata": {},
+   "source": [
+    "The resulting tar gz can be uploaded to BucketFS. You will learn how to do this in the next lesson:\n",
+    "[Customize the flavor, export and upload the script-language-container](./customize.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9ce8ce9-ef1b-4ff7-a665-d492dee76b5f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
