--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/test_slc.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/test_slc.ipynb
@@ -254,8 +254,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn.execute(textwrap.dedent(\"\"\"\n",
-    "CREATE OR REPLACE PYTHON3 SET SCRIPT test_xgboost(i integer)\n",
+    "conn.execute(textwrap.dedent(f\"\"\"\n",
+    "CREATE OR REPLACE {slctmanager.language_alias} SET SCRIPT test_xgboost(i integer)\n",
     "EMITS (o1 DOUbLE, o2 DOUbLE, o3 DOUbLE) AS\n",
     "\n",
     "def run(ctx):\n",
@@ -272,13 +272,13 @@
     "    \n",
     "    dtrain = xgb.DMatrix(X_train, label=y_train)\n",
     "    dtest = xgb.DMatrix(X_test, label=y_test)\n",
-    "    param = {\n",
+    "    param = {{\n",
     "        'max_depth': 3,  # the maximum depth of each tree\n",
     "        'eta': 0.3,  # the training step for each iteration\n",
     "        'silent': 1,  # logging mode - quiet\n",
     "        'objective': 'multi:softprob',  # error evaluation for multiclass training\n",
     "        'num_class': 3  # the number of classes that exist in this datset\n",
-    "        }\n",
+    "        }}\n",
     "    num_round = 20  # the number of training iterations\n",
     "    bst = xgb.train(param, dtrain, num_round)\n",
     "    preds = bst.predict(dtest)\n",
