Fixed some findings from review

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/advanced.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/advanced.ipynb
@@ -105,7 +105,7 @@
    "source": [
     "## What to do if something doesn't work?\n",
     "\n",
-    "During the build, export or upload it can happen that external package repositories might not be available or something is wrong on your machine where you run the build. For these cases, exaslct stores many logs to identify the problem.\n",
+    "During the build, export or upload it can happen that external package repositories might not be available or something is wrong on your machine where you run the build. For these cases, exaslct stores information in many logs to identify the problem.\n",
     "\n",
     "#### Exaslsct Log\n",
     "The main log for exaslct is stored directly as main.log in the build output of the job. With the following command you can find the main logs for all previous executions."
