--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/export_as_is.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/export_as_is.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Export the flavor as is\n",
     "\n",
-    "In this tutorial you learn how to build the existing flavor (without any modifiction) and write the result to a tar gz file.\n"
+    "In this tutorial you learn how to build the script-languages-container from the base flavor (without any modifiction) and write the result to a tar gz file. The base flavor `template-Exasol-all-python-3.10` is part of the Script-Languages Release repository and it's purpose is to be the base for customer modifications which aim to use Python UDF's with Python packages which are not included in the Standard Container of the Exasol database.\n",
+    "`exaslct` uses the flavor description to build a Docker image which is called the `release` image. `exaslct` can export the content of this Docker image then to a tar gz file.\n",
+    "\n"
    ]
   },
   {
@@ -102,6 +104,9 @@
    "metadata": {},
    "source": [
     "### Export the flavor\n",
+    "\n",
+    "Now execute the `export` step. The command builds the docker image and exports the Docker image to the export directory.\n",
+    "\n",
     "You could run the same on the command line with the `exaslct` tool:\n",
     "```\n",
     "cd <slc_dir>\n",
@@ -124,7 +129,8 @@
    "id": "fe0efd52-fb2c-4a8c-8712-0cefdc92c044",
    "metadata": {},
    "source": [
-    "#### Check the result"
+    "#### Check the result\n",
+    "The following command will show the resulting files of the export command:"
    ]
   },
   {
