Fixed some findings from review

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/advanced.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/advanced.ipynb
@@ -175,7 +175,7 @@
     "\n",
     "\n",
     "\n",
-    "For customizing a flavor usually the `flavor_customization` build step is most important. It contains everything you need to add dependencies. The remaining build steps should be only changed with care, but sometimes some dependencies are defined in other build steps because the script client depends on them. \n",
+    "For customizing a flavor usually the `flavor_customization` build step is most important. It contains everything you need to add dependencies. Changing the other build steps is required only in rare cases. Caution is needed when doing so. A typical use case is when dependencies are defined in other build steps because the script client depends on these dependencies.\n",
     "Check the directory structure of the selected flavor:\n"
    ]
   },
