--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/customize.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/customize.ipynb
@@ -210,7 +210,9 @@
    "metadata": {},
    "source": [
     "#### Upload the Container to the Database\n",
-    "To use our container we need to upload it to the BucketFS . If the build machine has access to the BucketFS we can do it with the exaslct upload command, otherwise you need to export the container and transfer it to a machine that has access to the BucketFS and upload it via curl, as described in our documentation.\n",
+    "To use the new container you need to upload it to the BucketFS. If the build machine has access to the BucketFS you do it with the `exaslct` upload command, as shown below. Otherwise you need to install the script-languages-container manually: \n",
+    "1. Transfer the container tar gz file of the previous step to a machine that has access to the BucketFS. \n",
+    "2. From that machine upload it via curl, as described in our [documentation](https://docs.exasol.com/db/latest/database_concepts/udf_scripts/adding_new_packages_script_languages.htm).\n",
     "\n",
     "With the following command you upload the new script language container.\n",
     "\n"
@@ -249,7 +251,7 @@
    "id": "8797d3e3-a43e-4250-a5f0-50fb04aa1514",
    "metadata": {},
    "source": [
-    "The syntax is: `alias=url`. The activation key will be used in the `ALTER_SESSION` or `ALTER_SYSTEM` commands to \"register\" the script-language-container for usage in the UDF's."
+    "The syntax of the activation statement is: `alias=url`. The activation key will be used in the `ALTER_SESSION` or `ALTER_SYSTEM` commands to \"register\" the script-language-container for usage in the UDF's."
    ]
   },
   {
