--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/test_slc.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/test_slc.ipynb
@@ -63,8 +63,8 @@
     "## Use the new Script-Languages-Container\n",
     "\n",
     "### Connect to the database and activate the container\n",
-    "Once you have a connection to the database you can run the ALTER SESSION statement or ALTER SYSTEM statement (if you want to activate the container permanently and globally) you got from `generate_language_activation`.\n",
-    "The `notebook` connector package provides a utility method, for creating an `pyexasol` connection and activating all registered languages:"
+    "Once you have a connection to the database you can run either the ALTER SESSION statement or ALTER SYSTEM statement. The latter statement will activate the container permanently and globally.\n",
+    "The `notebook` connector package provides a utility method, for creating an `pyexasol` connection and applying the `ALTER SESSION` command for all registered languages:"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "id": "a29627f2-c01d-45f4-ab0b-b71736d432dd",
    "metadata": {},
    "source": [
-    "The following command shows for example, which python3 package pip found directly after building the container image."
+    "Now you could examine the python3 pip packages file, which was created directly after building the container image by `exaslct`."
    ]
   },
   {
@@ -196,7 +196,7 @@
    "id": "4d52adf9-5630-4612-90a1-23ed21299771",
    "metadata": {},
    "source": [
-    "You could for example compare this to the package list of the flavor-customization build step and check if all your requested packages got installed."
+    "All your packages from the flavor-customization build step should be included. If you want to double check this, you can run:"
    ]
   },
   {
@@ -248,6 +248,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "43bdfaa2",
+   "metadata": {},
+   "source": [
+    "Finally, import and use the new packages. The following UDF uses the `xgboost` and `sklearn` modules to solve a small machine learning problem."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c476f9a2-38c5-4b1e-8fa6-8a2f07e928a6",
@@ -289,14 +297,6 @@
     "\n",
     "conn.export_to_pandas(\"select test_xgboost(1)\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "181b9536-bc73-4a92-8346-886ae89a6cb6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
