#304 Fixed links and dependencies

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_flights.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_flights.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# US Flights\n",
     "\n",
-    "In this notebook we will load a dataset with information about US Flights. The data is publicly accessible at the [Bureau of Transportation Statistics](https://www.transtats.bts.gov/DL_SelectFields.aspx?gnoyr_VQ=FGJ&QO_fu146_anzr=) of the US Department of Transportation. We will load a selection of this data stored in a AWS cloudfront.\n",
+    "In this notebook we will load a dataset with information about US Flights. The data is publicly accessible at the [Bureau of Transportation Statistics](https://www.transtats.bts.gov/Homepage.asp) of the US Department of Transportation. We will load a selection of this data stored in a AWS cloudfront.\n",
     "\n",
     "To execute queries and upload data to Exasol database we will be using the <a href=\"https://github.com/exasol/pyexasol\" target=\"_blank\" rel=\"noopener\">`pyexasol`</a> module.\n",
     "\n",
