--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/ibis/quickstart.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/ibis/quickstart.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "In this notebook, we will show some basic operations on Exasol data using Ibis. You can find more detailed information on using Ibis on the official [Ibis project](https://ibis-project.org/) website.\n",
     "\n",
-    "The notebook is organized as a quickstart tutorial in which we will be looking at US flight delays. In particular, we will explore the delay caused by the carrier. We will rank the carriers using the delay as the performance metric. The data is publicly accessible at the [Bureau of Transportation Statistics](https://www.transtats.bts.gov/DL_SelectFields.aspx?gnoyr_VQ=FGJ&QO_fu146_anzr=) of the US Department of Transportation.\n",
+    "The notebook is organized as a quickstart tutorial in which we will be looking at US flight delays. In particular, we will explore the delay caused by the carrier. We will rank the carriers using the delay as the performance metric. The data is publicly accessible at the [Bureau of Transportation Statistics](https://www.transtats.bts.gov/Homepage.asp) of the US Department of Transportation.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
