#304 Fixed the ibis connection in the notebook

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/ibis/quickstart.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/ibis/quickstart.ipynb
@@ -69,7 +69,7 @@
    "source": [
     "## connect\n",
     "\n",
-    "Let's connect to the Exasol database"
+    "Let's connect to the Exasol database. For convenience, we will use a wrapper around the [ibis.exasol.connect](https://ibis-project.org/backends/exasol) command."
    ]
   },
   {
@@ -79,16 +79,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ibis\n",
+    "from exasol.nb_connector.connections import open_ibis_connection\n",
     "\n",
-    "conn = ibis.exasol.connect(\n",
-    "    user=ai_lab_config.db_user,\n",
-    "    password=ai_lab_config.db_password,\n",
-    "    host=ai_lab_config.db_host_name,\n",
-    "    port=ai_lab_config.db_port,\n",
-    "    schema=ai_lab_config.db_schema,\n",
-    "    compression=True\n",
-    ")"
+    "conn = open_ibis_connection(ai_lab_config, compression=True)"
    ]
   },
   {
