--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/advanced.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/advanced.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "This notebooks explains some details and background regarding `exaslct`. This is especially useful when:\n",
-    "- you encounter a problem during one of the other notebooks in this tutorial.\n",
+    "- you encounter a problem when running one of the other notebooks in this tutorial.\n",
     "- you need to clean up disk space.\n",
     "- you want to do more modifications to the script-languages-container than just adding a Python package."
    ]
@@ -47,7 +47,7 @@
     "### Instantiate SLCT Manager\n",
     "\n",
     "We create an instance of the SlctManager class from the notebook connector. SLCT Manager, which stands for \"Script-Languages-Container-Tools\" Manager. \n",
-    "This class has some utility function which simplifies the use of the exaslct API."
+    "This class has some utility functions which simplifies the use of the exaslct API."
    ]
   },
   {
@@ -105,7 +105,7 @@
    "source": [
     "## What to do if something doesn't work?\n",
     "\n",
-    "During the build, export or upload it can happen that external package repositories might not be available or something is wrong on your machine where you run the build. For these cases, exaslct stores information in many logs to identify the problem.\n",
+    "During the build, export or upload it can happen that external package repositories are not available or something is wrong on your machine where you run the build. For these cases, exaslct stores information in many logs that can help to identify the problem.\n",
     "\n",
     "#### Exaslsct Log\n",
     "The main log for exaslct is stored directly as main.log in the build output of the job. With the following command you can find the main logs for all previous executions."
@@ -127,7 +127,7 @@
    "id": "ce4be726-86ad-487c-9d76-705c360b825e",
    "metadata": {},
    "source": [
-    "With the following command you can show the log file from the last execution."
+    "The following command showd the log file from the last execution."
    ]
   },
   {
@@ -241,7 +241,7 @@
    "id": "b946027b-dfce-472c-bfd4-1f828b29011e",
    "metadata": {},
    "source": [
-    "The `exasol/script-language-container:template-Exasol-all-python-3.10-release_...` image is the final image release image for the script-language-container, the other (intermediate) images are used for the caching mechnism."
+    "The `exasol/script-language-container:template-Exasol-all-python-3.10-release_...` image is the final release image for the script-language-container, the other (intermediate) images are used for the caching mechnism."
    ]
   },
   {
