--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/customize.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/customize.ipynb
@@ -39,7 +39,7 @@
     "### Instantiate SLCT Manager\n",
     "\n",
     "We create an instance of the SlctManager class from the notebook connector. SLCT Manager, which stands for \"Script-Languages-Container-Tools\" Manager. \n",
-    "This class has some utility function which simplifies the use of the exaslct API."
+    "This class has some utility functions which simplifies the use of the exaslct API."
    ]
   },
   {
@@ -122,7 +122,7 @@
    "id": "8b0f6884-8fda-44d1-92a4-ae23040b109c",
    "metadata": {},
    "source": [
-    "The Dockerfile consists of two parts. The first part installs the packages from the package list and should only be change with care. The second part is free for your changes. Read the description in the Dockerfile carefully to find out what you can and shouldn't do."
+    "The Dockerfile consists of two parts. The first part installs the packages from the package list and should only be changed with care. The second part is free for your changes. Read the description in the Dockerfile carefully to find out what you can and shouldn't do."
    ]
   },
   {
