--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/test_slc.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/test_slc.ipynb
@@ -41,7 +41,7 @@
     "### Instantiate SLCT Manager\n",
     "\n",
     "We create an instance of the SlctManager class from the notebook connector. SLCT Manager, which stands for \"Script-Languages-Container-Tools\" Manager. \n",
-    "This class has some utility function which simplifies the use of the exaslct API."
+    "This class has some utility functions which simplifies the use of the exaslct API."
    ]
   },
   {
@@ -156,7 +156,9 @@
     "Running `pip list` inside the container displays the available packages. In case of unexpected results, please have a look at the information stored by `exaslct` during build-time inside the container.\n",
     "\n",
     "#### Embedded Build Information of the Container\n",
-    "Here we see an overview about the build information which `exaslct` embedded into the container. `exaslct` stores all packages lists (as defined in the flavor and what actually got installed), the final Dockerfiles and the image info. The image info describes how the underlying Docker images of the container got built. The build information is stored in the `/build_info` directory in the container. You can use again our helper UDF to inspect the build information."
+    "Here we see an overview about the build information which `exaslct` embedded into the container. `exaslct` stores all packages lists (as defined in the flavor and what actually got installed), the final Dockerfiles and the image info. The image info describes how the underlying Docker images of the container got built. The build information is stored in the `/build_info` directory in the container.\n",
+    "\n",
+    "This command will show an overview of the build information:"
    ]
   },
   {
@@ -176,7 +178,7 @@
    "id": "a29627f2-c01d-45f4-ab0b-b71736d432dd",
    "metadata": {},
    "source": [
-    "Now you could examine the python3 pip packages file, which was created directly after building the container image by `exaslct`."
+    "Now you can examine the python3 pip packages file, which was created directly after building the container image by `exaslct`."
    ]
   },
   {
