--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/using_the_script_languages_container_tool.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/using_the_script_languages_container_tool.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "This tutorial uses the `template-Exasol-all-python-3.10` flavor as base. In short words, a flavor is a recipe for building a script-languages-container. \n",
+    "This tutorial uses the `template-Exasol-all-python-3.10` flavor as the base. In short words, a flavor is a recipe for building a script-languages-container. \n",
     "Under the hood, the `exaslct` tool is used, see [Script-Language Container Tool](https://github.com/exasol/script-languages-container-tool) for details. The `exaslct` tool can be used to build, test and upload script-languages-container for an Exasol database.\n",
     "You will learn how to:\n",
     "- [Export a script-languages-container from the flavor](./export_as_is.ipynb)\n",
