--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "### Instantiate SLCT Manager\n",
     "\n",
-    "We create an instance of the SlctManager class from the notebook connector. SLCT Manager, which stands for \"Script-Languages-Container-Tools\" Manager. This class has some utility function which simplifies the use of the exaslct API."
+    "We create an instance of the SlctManager class from the notebook connector. SLCT Manager, which stands for \"Script-Languages-Container-Tools\" Manager. This class has some utility functions which simplifies the use of the exaslct API."
    ]
   },
   {
@@ -105,7 +105,7 @@
    "metadata": {},
    "source": [
     "### Use existing script-languages-repository\n",
-    "If you have chosen to use an existing script-languages-repository path you simply select the path."
+    "If chose to use an existing script-languages-repository path you simply select the path."
    ]
   },
   {
