--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/export_as_is.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/export_as_is.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Export the flavor as is\n",
     "\n",
-    "In this tutorial you learn how to build the script-languages-container from the base flavor (without any modifiction) and write the result to a tar gz file. The base flavor `template-Exasol-all-python-3.10` is part of the Script-Languages Release repository and it's purpose is to be the base for customer modifications which aim to use Python UDF's with Python packages which are not included in the Standard Container of the Exasol database.\n",
+    "In this tutorial you will learn how to build the script-languages-container from the base flavor (without any modifiction) and write the result to a tar gz file. The base flavor `template-Exasol-all-python-3.10` is part of the Script-Languages Release repository and it's purpose is to be the base for customer modifications which aim to use Python UDF's with Python packages which are not included in the Standard Container of the Exasol database.\n",
     "`exaslct` uses the flavor description to build a Docker image which is called the `release` image. `exaslct` can export the content of this Docker image then to a tar gz file.\n",
     "\n"
    ]
@@ -40,7 +40,7 @@
     "### Instantiate SLCT Manager\n",
     "\n",
     "We create an instance of the SlctManager class from the notebook connector. SLCT Manager, which stands for \"Script-Languages-Container-Tools\" Manager. \n",
-    "This class has some utility function which simplifies the use of the exaslct API."
+    "This class has some utility functions which simplifies the use of the exaslct API."
    ]
   },
   {
