Fixes from Torsten's review: 1. Added comment in export about how to download the tar gz file in Jupyter IDE 2. Added a comment about warnings in customize.ipynb 3. Changed default alias 4. Use Schema for SQL connection from nb-connector

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/customize.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/customize.ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(get_alias_ui(ai_lab_config, \"my_custom_python\"))"
+    "display(get_alias_ui(ai_lab_config, \"ai-lab-default-custom\"))"
    ]
   },
   {
@@ -175,7 +175,7 @@
    "source": [
     "#### Rebuilding the customized Flavor\n",
     "\n",
-    "After changing the flavor you need to rebuild it. You can do it by running `export` again. Exaslct automatically recognizes that the flavor has changed and builds a new version of the container."
+    "After changing the flavor you need to rebuild it. You can do it by running `export` again. Exaslct automatically recognizes that the flavor has changed and builds a new version of the container. Don't get confused by the warnings: `exaslct` first tries to find the cached docker images (see [Advanced Topics](./advanced.ipynb)), but as the content has changed, the cached image is not available, and the docker service returns a 404 error message."
    ]
   },
   {
@@ -217,6 +217,11 @@
     "2. From that machine upload it via curl, as described in our [documentation](https://docs.exasol.com/db/latest/database_concepts/udf_scripts/adding_new_packages_script_languages.htm).\n",
     "\n",
     "With the following command you upload the new script language container.\n",
+    "You could run the same on the command line with the `exaslct` tool:\n",
+    "```\n",
+    "cd <slc_dir>\n",
+    "./exaslct upload --flavor-path flavors/<flavor_path> --database-host <database_host> --bucketfs-port <bucketfs_port> --bucketfs-username <bucketfs_username> --bucketfs-password <bucketfs_password> --bucketfs-name <bucketfs_name> --bucket-name <bucket_name>\n",
+    "```\n",
     "\n"
    ]
   },
@@ -235,7 +240,13 @@
    "id": "679730d4-820c-4547-8098-9885818cb4e8",
    "metadata": {},
    "source": [
-    "This command also stores the activation statement in the ai-lab-config. You can verify it with:"
+    "This command also stores the activation statement in the ai-lab-config. You can verify it with:\n",
+    "\n",
+    "You could get the activation SLQ command on the command line with `exaslct` by running:\n",
+    "```\n",
+    "cd <slc_dir>\n",
+    "./exaslct generate-language-activation --flavor-path flavors/<flavor_path> --bucketfs-name <bucketfs_name> --bucket-name <bucket_name> --container-name <container_name> --path-in-bucket <path_in_bucket>\n",
+    "```"
    ]
   },
   {
