--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/export_as_is.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/export_as_is.ipynb
@@ -148,17 +148,11 @@
    "id": "826ac429-f65a-4f9a-98e7-a63f79a0a5fe",
    "metadata": {},
    "source": [
-    "The resulting tar gz can be uploaded to BucketFS. You will learn how to do this in the next lesson:\n",
+    "Hint: If you want to download the tar gz file, you can do this in the Jupyter Project View on the left side.\n",
+    "\n",
+    "The resulting tar gz can then be uploaded to BucketFS. You will learn how to do this in the next lesson:\n",
     "[Customize the flavor, export and upload the script-language-container](./customize.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c9ce8ce9-ef1b-4ff7-a665-d492dee76b5f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
